--- a/TestClients/js/ui/index.html
+++ b/TestClients/js/ui/index.html
@@ -5,33 +5,13 @@
     </head>
     <body>
         <script src="https://github.com/Azure/communication-ui-library/releases/latest/download/chatComposite.js"></script>
+        <script src="client.js"></script>
         <div id="chat-container" style="height: 500px"></div>
         <script type="module">
             // todo: UI to create user, create chat thread, add participants, generate or set displayname
 
-            let response = await fetch("https://localhost/identities", {
-                method: 'POST',
-                body: JSON.stringify({
-                    createTokenWithScopes: ["voip"]
-                }),
-                headers: {
-                    "content-type": "application/json"
-                }
-            });
-            const { identity, accessToken } = await response.json();
-
-            response = await fetch("https://localhost/chat/threads", {
-                method: 'POST',
-                body: JSON.stringify({
-                    createTokenWithScopes: ["voip"]
-                }),
-                withCredentials: true,
-                headers: {
-                    "authorization": `Bearer ${accessToken.token}`,
-                    "content-type": "application/json"
-                }
-            });
-            const {chatThread } = await response.json();
+            const { identity, accessToken } = await createUser();
+            const {chatThread } = await createChatThread(accessToken.token, "The weather forecast 😶‍🌫️");
 
             const chatAdapter = await chatComposite.loadChatComposite({
                 displayName: "Emil the Emulator",
