ui: add participants

--- a/TestClients/js/ui/index.html
+++ b/TestClients/js/ui/index.html
@@ -28,5 +28,15 @@
             // todo: add participants, generate or set displayname
             initUi();
         </script>
+        <div id="addUsers" style="visibility: hidden;">
+            <div>
+                <select id="select-addUsers" multiple>
+                    <option value="">Select users</option>
+                </select>
+            </div>
+            <div>
+                <button id="btn-addUsers">Add to chat</button>
+            </div>
+        </div>
     </body>
 </html>
