--- a/AcsEmulator/acs-emulator-ui/public/index.html
+++ b/AcsEmulator/acs-emulator-ui/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <base href="%PUBLIC_URL%/" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Azure Communication Services Emulator"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,9 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Azure Communication Services Emulator</title>
   </head>
-  <body>
+  <body style="margin: 0px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
